--- a/shaam.html
+++ b/shaam.html
@@ -26,6 +26,12 @@
       --radius: 22px;
       --radius2: 16px;
       --max: 1200px;
+      --scroll-shift: 0%;
+      --glow-1: .5;
+      --glow-2: .34;
+      --glow-3: .24;
+      --glow-4: .18;
+      --warmth: .16;
     }
 
     *{ box-sizing:border-box; }
@@ -34,12 +40,14 @@
       margin:0;
       font-family: Manrope, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background:
-        radial-gradient(1000px 520px at 12% 6%, rgba(255,212,0,.26), transparent 60%),
-        radial-gradient(760px 460px at 90% 18%, rgba(255,212,0,.16), transparent 62%),
-        radial-gradient(760px 680px at 50% 90%, rgba(255,212,0,.10), transparent 65%),
-        linear-gradient(180deg, var(--bg), #050505 60%, #020202);
+        radial-gradient(1100px 560px at 12% calc(6% + var(--scroll-shift)), rgba(255,214,0,var(--glow-1)), transparent 60%),
+        radial-gradient(880px 520px at 90% calc(18% + var(--scroll-shift)), rgba(255,235,120,var(--glow-2)), transparent 62%),
+        radial-gradient(900px 700px at 50% calc(85% + var(--scroll-shift)), rgba(255,226,90,var(--glow-3)), transparent 65%),
+        radial-gradient(640px 420px at 18% 80%, rgba(255,204,60,var(--glow-4)), transparent 70%),
+        linear-gradient(180deg, rgba(255,214,80,var(--warmth)) 0%, #0b0a06 55%, #050505 100%);
       color:var(--text);
       overflow-x:hidden;
+      transition: background .6s ease;
     }
 
     a{ color:inherit; text-decoration:none; }
@@ -1471,6 +1479,35 @@
     document.getElementById('sendFake')?.addEventListener('click', () => {
       alert('Заявка отправлена (демо). Хочешь — подключу отправку в Telegram/Email.');
     });
+
+    // Background shift on scroll
+    const docEl = document.documentElement;
+    const bodyEl = document.body;
+    let bgTicking = false;
+
+    const updateBackground = () => {
+      const maxScroll = docEl.scrollHeight - window.innerHeight;
+      const ratio = maxScroll > 0 ? Math.min(window.scrollY / maxScroll, 1) : 0;
+      const shift = (ratio * 40).toFixed(2);
+      bodyEl.style.setProperty('--scroll-shift', `${shift}%`);
+      bodyEl.style.setProperty('--glow-1', (0.5 + ratio * 0.22).toFixed(2));
+      bodyEl.style.setProperty('--glow-2', (0.34 + ratio * 0.18).toFixed(2));
+      bodyEl.style.setProperty('--glow-3', (0.24 + ratio * 0.16).toFixed(2));
+      bodyEl.style.setProperty('--glow-4', (0.18 + ratio * 0.12).toFixed(2));
+      bodyEl.style.setProperty('--warmth', (0.16 + ratio * 0.12).toFixed(2));
+      bgTicking = false;
+    };
+
+    const scheduleBackgroundUpdate = () => {
+      if (!bgTicking) {
+        bgTicking = true;
+        window.requestAnimationFrame(updateBackground);
+      }
+    };
+
+    window.addEventListener('scroll', scheduleBackgroundUpdate, { passive: true });
+    window.addEventListener('resize', scheduleBackgroundUpdate);
+    updateBackground();
 
     // Year
     document.getElementById('year').textContent = new Date().getFullYear();
